--- a/style.css
+++ b/style.css
@@ -14,12 +14,15 @@ h1 {
 .calendar {
   width: 250px;
   height: 300px;
+  border-radius: 10px;
+  box-shadow: 0 0 20px gray;
 }
 
 .calendar-nav {
   height: 60px;
   background-color: #03c988;
   border-radius: 10px 10px 0 0;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -40,6 +43,13 @@ h1 {
 
 .calendar-grid {
   height: 240px;
-  background-color: lightblue;
+  background-color: white;
   border-radius: 0 0 10px 10px;
+}
+
+.date-week ul {
+  display: flex;
+  justify-content: space-between;
+  color: #b2b2b2;
+  font-size: 12px;
 }
