--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+  --calendar-width: 250px;
+}
+
 .calendar-container {
   width: 100vw;
   height: 100vh;
@@ -12,8 +16,8 @@ h1 {
 }
 
 .calendar {
-  width: 250px;
-  height: 300px;
+  width: var(--calendar-width);
+  height: calc(var(--calendar-width) * 1.2);
   border-radius: 10px;
   box-shadow: 0 0 20px gray;
 }
@@ -45,11 +49,50 @@ h1 {
   height: 240px;
   background-color: white;
   border-radius: 0 0 10px 10px;
+  display: grid;
+  grid-template-rows: repeat(7, auto);
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-areas:
+    'sun mon tue wed thu fri sat'
+    'day day day day day day day'
+    'day day day day day day day'
+    'day day day day day day day'
+    'day day day day day day day'
+    'day day day day day day day'
+    'day day day day day day day';
 }
 
-.date-week ul {
-  display: flex;
-  justify-content: space-between;
+.date-week {
+  display: contents;
+  text-align: center;
   color: #b2b2b2;
   font-size: 12px;
+}
+
+.sun {
+  grid-area: sun;
+}
+
+.mon {
+  grid-area: mon;
+}
+
+.tue {
+  grid-area: tue;
+}
+
+.wed {
+  grid-area: wed;
+}
+
+.thu {
+  grid-area: thu;
+}
+
+.fri {
+  grid-area: fri;
+}
+
+.sat {
+  grid-area: sat;
 }
