--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h1 {
 }
 
 .calendar-nav {
-  height: 60px;
+  height: calc(var(--calendar-width) * 1.2 * 0.2);
   background-color: #03c988;
   border-radius: 10px 10px 0 0;
   position: relative;
@@ -35,20 +35,21 @@ h1 {
 
 .date-month {
   color: white;
-  font-size: 16px;
+  font-size: calc(var(--calendar-width) / 18);
   margin-bottom: 5px;
 }
 
 .date-year {
   color: white;
-  font-size: 10px;
+  font-size: calc(var(--calendar-width) / 25);
   font-weight: 300;
 }
 
 .calendar-grid {
-  height: 240px;
+  height: calc(var(--calendar-width) * 1.2 * 0.8);
   background-color: white;
   border-radius: 0 0 10px 10px;
+  align-items: center;
   display: grid;
   grid-template-rows: repeat(7, auto);
   grid-template-columns: repeat(7, 1fr);
