--- a/style.css
+++ b/style.css
@@ -44,13 +44,13 @@ h1 {
   justify-content: center;
 }
 
-.date-month {
+.calendar-month {
   color: white;
   font-size: calc(var(--calendar-width) / 18);
   margin-bottom: 5px;
 }
 
-.date-year {
+.calendar-year {
   color: white;
   font-size: calc(var(--calendar-width) / 25);
   font-weight: 300;
@@ -74,7 +74,7 @@ h1 {
     'day day day day day day day';
 }
 
-.date-week {
+.calendar-week {
   display: contents;
   text-align: center;
   color: #b2b2b2;
@@ -107,4 +107,8 @@ h1 {
 
 .sat {
   grid-area: sat;
+}
+
+.calendar-day li {
+  grid-area: day;
 }
