--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ h1 {
   border-radius: 0 0 10px 10px;
   align-items: center;
   display: grid;
-  grid-template-rows: repeat(7, auto);
+  grid-template-rows: repeat(7, 1fr);
   grid-template-columns: repeat(7, 1fr);
   grid-template-areas:
     'sun mon tue wed thu fri sat'
@@ -78,7 +78,7 @@ h1 {
   display: contents;
   text-align: center;
   color: #b2b2b2;
-  font-size: 12px;
+  font-size: calc(var(--calendar-width) / 20);
 }
 
 .sun {
@@ -109,6 +109,49 @@ h1 {
   grid-area: sat;
 }
 
-.calendar-day li {
-  grid-area: day;
+.calendar-day {
+  display: contents;
+  font-size: calc(var(--calendar-width) / 21);
+  text-align: center;
+}
+
+.calendar-day .prev-month-date {
+  color: #b2b2b2;
+}
+
+.calendar-day .current-month-date {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #03c988;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar-day .next-month-date {
+  color: #b2b2b2;
+}
+
+/* 임시 스타일 설정(색상 바꿀것) */
+.calendar-day .date:hover {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #03c988;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar-day .selected {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid #03c988;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
